# YoloVr

./: .gitignore  .gitmodules  ARCHITECTURE_DIAGRAMS.puml  DOCKER_PACKAGES.md  Dockerfile.linux-builder  Dockerfile.windows-builder  LICENSE  QUICK_TESTING_GUIDE.md  README-Docker.md  ROADMAP.puml  ROADMAP_SIMPLE.puml  TESTING_PLAN.puml  TRACKER_TESTING.md  dependencies.linux  docker-compose.yml  test_simple.puml
cmake/: windows-toolchain.cmake
driver/: CMakeLists.txt
driver/src/: device_provider.cpp  device_provider.h  tracker_data.proto  tracker_data_receiver.cpp  tracker_data_receiver.h  tracker_device_driver.cpp  tracker_device_driver.h
driver/zincyolotrackers/: driver.vrdrivermanifest
driver/zincyolotrackers/resources/input/: mytracker_profile.json
driver/zincyolotrackers/resources/input/tracker/: yolotracker_chest_profile.json  yolotracker_head_profile.json  yolotracker_hip_profile.json  yolotracker_leftforearm_profile.json  yolotracker_leftleg_profile.json  yolotracker_leftthigh_profile.json  yolotracker_leftupperarm_profile.json  yolotracker_rightforearm_profile.json  yolotracker_rightleg_profile.json  yolotracker_rightthigh_profile.json  yolotracker_rightupperarm_profile.json  yolotracker_waist_profile.json
driver/zincyolotrackers/resources/localization/: localization.json
driver/zincyolotrackers/resources/settings/: default.vrsettings
python-client/: README.md  requirements.txt  test_udp_client.py
python-client/examples/: simple_tracking.py
python-client/scripts/: generate_proto.py  generate_proto_docker.py
python-client/yolovr/: __init__.py  client.py  frame.py
scripts/: build-all.sh  build-linux.sh  build-windows.sh
